5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4131/executions/1758_1583.log
== SUBMITION (2019-05-30 00:52:19) 
-- CODE:
from numpy import*
a = input("num:")
n = a[0:3]
j = 3
i = 3
k = 6
while(j<len(a)):
	n+a","+a[i:k]
	i+=3
	k+=3
	j+=3
print(n
	 )
-- EXECUTION TIME:
0.176967
-- ERROR:
  File "/home/codebench/codes/1758/1583/main.py", line 8
    n+a","+a[i:k]
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 00:52:24) 
-- CODE:
from numpy import*
a = input("num:")
n = a[0:3]
j = 3
i = 3
k = 6
while(j<len(a)):
	n+a","+a[i:k]
	i+=3
	k+=3
	j+=3
print(n)
-- EXECUTION TIME:
0.20236
-- ERROR:
  File "/home/codebench/codes/1758/1583/main.py", line 8
    n+a","+a[i:k]
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 00:52:24) 
-- CODE:
from numpy import*
a = input("num:")
n = a[0:3]
j = 3
i = 3
k = 6
while(j<len(a)):
	n+a","+a[i:k]
	i+=3
	k+=3
	j+=3
print(n)
-- EXECUTION TIME:
0.300187
-- ERROR:
  File "/home/codebench/codes/1758/1583/main.py", line 8
    n+a","+a[i:k]
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 00:52:25) 
-- CODE:
from numpy import*
a = input("num:")
n = a[0:3]
j = 3
i = 3
k = 6
while(j<len(a)):
	n+a","+a[i:k]
	i+=3
	k+=3
	j+=3
print(n)
-- ERROR:
File "XXXX", line 8
    n+a","+a[i:k]
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 00:52:35) 
-- CODE:
from numpy import*
a = input("num:")
n = a[0:3]
j = 3
i = 3
k = 6
while(j<len(a)):
	n+a"."+a[i:k]
	i+=3
	k+=3
	j+=3
print(n)
-- ERROR:
File "XXXX", line 8
    n+a"."+a[i:k]
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 00:54:00) 
-- CODE:
from numpy import*
a = input("num:")
n = a[0:3]
j = 3
i = 3
k = 6
while(j<len(a)):
	n+="."+a[i:k]
	i+=3
	k+=3
	j+=3
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 00:54:03) 
-- CODE:
from numpy import*
a = input("num:")
n = a[0:3]
j = 3
i = 3
k = 6
while(j<len(a)):
	n+="."+a[i:k]
	i+=3
	k+=3
	j+=3
print(n)
-- EXECUTION TIME:
0.343339
-- TEST CASE 1:
---- input:
123
---- correct output:
123
---- user output:
123
-- TEST CASE 2:
---- input:
123456789000987654321
---- correct output:
123.456.789.000.987.654.321
---- user output:
123.456.789.000.987.654.321
-- TEST CASE 3:
---- input:
987654321
---- correct output:
987.654.321
---- user output:
987.654.321
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
